# tmp-cams-simple-preprocessing

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
dataset/: MACCGE01.pkl
dataset/raw/PMACCCHIMERE/: 2023_04_01_15_0_O3.grib  2023_04_02_15_0_O3.grib  2023_04_03_15_0_O3.grib  2023_04_04_15_0_O3.grib  2023_04_05_15_0_O3.grib  2023_04_06_15_0_O3.grib  2023_04_07_15_0_O3.grib  2023_04_08_15_0_O3.grib  2023_04_09_15_0_O3.grib  2023_04_10_15_0_O3.grib  2023_04_11_15_0_O3.grib  2023_04_12_15_0_O3.grib  2023_04_13_15_0_O3.grib  2023_04_14_15_0_O3.grib  2023_04_15_15_0_O3.grib  2023_04_16_15_0_O3.grib  2023_04_17_15_0_O3.grib  2023_04_18_15_0_O3.grib  2023_04_19_15_0_O3.grib  2023_04_20_15_0_O3.grib  2023_04_21_15_0_O3.grib  2023_04_22_15_0_O3.grib  2023_04_23_15_0_O3.grib  2023_04_24_15_0_O3.grib  2023_04_25_15_0_O3.grib  2023_04_26_15_0_O3.grib  2023_04_27_15_0_O3.grib  2023_04_28_15_0_O3.grib  2023_04_29_15_0_O3.grib  2023_04_30_15_0_O3.grib  2024_05_01_15_0_O3.grib
dataset/raw/PMACCDEHM/: 2023_04_01_15_0_O3.grib  2023_04_02_15_0_O3.grib  2023_04_03_15_0_O3.grib  2023_04_04_15_0_O3.grib  2023_04_05_15_0_O3.grib  2023_04_06_15_0_O3.grib  2023_04_07_15_0_O3.grib  2023_04_08_15_0_O3.grib  2023_04_09_15_0_O3.grib  2023_04_10_15_0_O3.grib  2023_04_11_15_0_O3.grib  2023_04_12_15_0_O3.grib  2023_04_13_15_0_O3.grib  2023_04_14_15_0_O3.grib  2023_04_15_15_0_O3.grib  2023_04_16_15_0_O3.grib  2023_04_17_15_0_O3.grib  2023_04_18_15_0_O3.grib  2023_04_19_15_0_O3.grib  2023_04_20_15_0_O3.grib  2023_04_21_15_0_O3.grib  2023_04_22_15_0_O3.grib  2023_04_23_15_0_O3.grib  2023_04_24_15_0_O3.grib  2023_04_25_15_0_O3.grib  2023_04_26_15_0_O3.grib  2023_04_27_15_0_O3.grib  2023_04_28_15_0_O3.grib  2023_04_29_15_0_O3.grib  2023_04_30_15_0_O3.grib  2024_05_01_15_0_O3.grib
dataset/raw/PMACCEMEP/: 2023_04_01_15_0_O3.grib  2023_04_02_15_0_O3.grib  2023_04_03_15_0_O3.grib  2023_04_04_15_0_O3.grib  2023_04_05_15_0_O3.grib  2023_04_06_15_0_O3.grib  2023_04_07_15_0_O3.grib  2023_04_08_15_0_O3.grib  2023_04_09_15_0_O3.grib  2023_04_10_15_0_O3.grib  2023_04_11_15_0_O3.grib  2023_04_12_15_0_O3.grib  2023_04_13_15_0_O3.grib  2023_04_14_15_0_O3.grib  2023_04_15_15_0_O3.grib  2023_04_16_15_0_O3.grib  2023_04_17_15_0_O3.grib  2023_04_18_15_0_O3.grib  2023_04_19_15_0_O3.grib  2023_04_20_15_0_O3.grib  2023_04_21_15_0_O3.grib  2023_04_22_15_0_O3.grib  2023_04_23_15_0_O3.grib  2023_04_24_15_0_O3.grib  2023_04_25_15_0_O3.grib  2023_04_26_15_0_O3.grib  2023_04_27_15_0_O3.grib  2023_04_28_15_0_O3.grib  2023_04_29_15_0_O3.grib  2023_04_30_15_0_O3.grib  2024_05_01_15_0_O3.grib
dataset/raw/PMACCEURADIM/: 2023_04_01_15_0_O3.grib  2023_04_02_15_0_O3.grib  2023_04_03_15_0_O3.grib  2023_04_04_15_0_O3.grib  2023_04_05_15_0_O3.grib  2023_04_06_15_0_O3.grib  2023_04_07_15_0_O3.grib  2023_04_08_15_0_O3.grib  2023_04_09_15_0_O3.grib  2023_04_10_15_0_O3.grib  2023_04_11_15_0_O3.grib  2023_04_12_15_0_O3.grib  2023_04_13_15_0_O3.grib  2023_04_14_15_0_O3.grib  2023_04_15_15_0_O3.grib  2023_04_16_15_0_O3.grib  2023_04_17_15_0_O3.grib  2023_04_18_15_0_O3.grib  2023_04_19_15_0_O3.grib  2023_04_20_15_0_O3.grib  2023_04_21_15_0_O3.grib  2023_04_22_15_0_O3.grib  2023_04_23_15_0_O3.grib  2023_04_24_15_0_O3.grib  2023_04_25_15_0_O3.grib  2023_04_26_15_0_O3.grib  2023_04_27_15_0_O3.grib  2023_04_28_15_0_O3.grib  2023_04_29_15_0_O3.grib  2023_04_30_15_0_O3.grib  2024_05_01_15_0_O3.grib
dataset/raw/PMACCGEMAQ/: 2023_04_01_15_0_O3.grib  2023_04_02_15_0_O3.grib  2023_04_03_15_0_O3.grib  2023_04_04_15_0_O3.grib  2023_04_05_15_0_O3.grib  2023_04_06_15_0_O3.grib  2023_04_07_15_0_O3.grib  2023_04_08_15_0_O3.grib  2023_04_09_15_0_O3.grib  2023_04_10_15_0_O3.grib  2023_04_11_15_0_O3.grib  2023_04_12_15_0_O3.grib  2023_04_13_15_0_O3.grib  2023_04_14_15_0_O3.grib  2023_04_15_15_0_O3.grib  2023_04_16_15_0_O3.grib  2023_04_17_15_0_O3.grib  2023_04_18_15_0_O3.grib  2023_04_19_15_0_O3.grib  2023_04_20_15_0_O3.grib  2023_04_21_15_0_O3.grib  2023_04_22_15_0_O3.grib  2023_04_23_15_0_O3.grib  2023_04_24_15_0_O3.grib  2023_04_25_15_0_O3.grib  2023_04_26_15_0_O3.grib  (+5 more)
scripts/: inspect_data.py  plots.py  preprocessing.py
(+187 files in other folders)
